# helm

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG 2.md  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  Dockerfile  LICENSE 2  MANIFEST 2.in  MANIFEST.in  README.md  ai21_perplexity.py  ai21_random_window.py  bQA.ipynb  conftest.py  constraints 2.txt  constraints.txt  country_qa.ipynb  create_custome_mcqa_dataset.py  debug_gemini.py  demo.py  docker-compose.yml  docker-env.sh  ehr_sql_annotator.py  ehr_sql_metrics.py  ehr_sql_scenario.py  entrypoint.sh  harmbench_behaviors_text_all.html  hedge_words_percentage.ipynb  helm_scenario1_testing_code.py  image_generation_demo.py  install-dev.sh  install-heim-extras.sh  install-shelm-extras 2.sh  jeopardy_qa.ipynb  json-urls-root.js  log.txt  (+37 more)
.github/: dependabot.yml
.github/workflows/: build-frontend.yml  deploy-docs.yml  deploy-frontend.yaml  frontend.yml  manage-python-cache.yml  publish-pypi.yml  publish.yml  python-publish.yml  test-daily-integration.yml  test-frontend.yml  test-python.yml  test-scenarios.yml  test.yml  test_scenarios.yml  update-dependencies.yml  update-requirements.yml  upgrade-dependencies.yml  upgrade-requirements.yml
benchmark_output_last/runs/: latest
dialogue/: chatserver.py
dialogue/static/: crfm-wrapper.js  interface.html  style.css
dialogue/variance/: test_variance.py
docker/helm-base/: Dockerfile
docker/helm-requirements/: Dockerfile
docker/helm-summarize/: Dockerfile
dockerfiles/: README.md  helm.dockerfile
docs/: Gemfile  Importing_custom_modules.md  README.md  _config.yml  adding_models.md  adding_new_models.md  adding_new_scenarios.md  adding_new_tokenizers.md  benchmark.md  code.md  command_line_tutorial.md  credentials.md  custom_models.md  custom_scenarios.md  custom_tokenizers.md  deployment.md  developer_adding_new_models.md  developer_setup.md  docstrings.css  downloading_raw_results.md  editing_documentation 2.md  editing_documentation.md  efficient_benchmarking.md  enterprise_benchmark.md  evaluation_run_lifecycle.md  get_helm_rank.md  heim 2.md  heim.md  huggingface_models 2.md  huggingface_models.md  importing_custom_modules.md  index.md  installation.md  lica_bench.md  maintenance_mode.md  medhelm.md  metrics 2.md  metrics.md  mkdocs_hooks.py  mkdocs_macros.py  (+28 more)
docs/_includes/: docs_sidebar.html  github_stars.html  header.html  theme_head.html
docs/_layouts/: default.html  docs.html
docs/_site/: CNAME  adding_new_models.html  adding_new_scenarios.html  adding_new_tokenizers.html  benchmark.html  code.html  credentials.html  developer_adding_new_models.html  developer_setup.html  downloading_raw_results.html  editing_documentation.html  enterprise_benchmark.md  get_helm_rank.html  heim.html  huggingface_models.html  importing_custom_modules.html  index.html  installation.html  medhelm.html  metrics.html  models.html  perturbations.html  proxy_server.html  quick_start.html  reeval.html  reproducing_leaderboards.html  run_entries.html  run_entries_configuration_files.html  scenarios.html  schemas.html  tutorial.html  vhelm.html
docs/scripts/: jekyll_prepare_mkdocstring_pages.py  serve_jekyll_local.sh
helm-frontend/: .eslintrc.cjs  .yarnrc.yaml  README.md  index 2.html  index.html  package 2.json  package.json  project_metadata.json  tailwind.config.js  tsconfig.json  vite.config.ts
helm-frontend/public/: config.js  releaseIndex.json
helm-frontend/src/: App 2.css  App 2.tsx  App.css  App.tsx  vite-env.d 2.ts
presentation/: run_all.py  run_specs.conf
prob_env/: credentials.conf
prod_env/: accounts.sqlite  credentials.conf  model_deployments.yaml  model_metadata.yaml  tokenizer_configs.yaml
prod_env/cache/: cohere.sqlite
run/: readme.md  run_entries_helm_lite.conf
scripts/: add_completion_index_to_cache.py  benchmark-present-all-06082022.sh  benchmark-present-all-06252022.sh  benchmark-present-all-06272022.sh  benchmark-present-all-06282022.sh  benchmark-present-all-ai21.sh  benchmark-present-all.sh  benchmark-present-together-dryrun.sh  benchmark-server.sh  calculate_gooseai_credits.py  calculate_openai_credits.py  compute_request_limits.py  convert_accounts_jsonl_to_sqlite.py  create-www-vhelm.sh  create-www.sh  create_custom_mcqa_dataset.py  decrypt_scenario_states.py  deepfloyd.py  encrypt_scenario_states.py  estimate_cost.py  estimate_cost_audio.py  extract_prompts.py  fix_ai21_cache.py  fix_anthropic_cache.py  generate-together-requests.sh  generate_few_shot_data.py  generate_synthetic_efficiency_instances.py  heim_human_eval.py  helm-run-all.sh  inheritence_inspector.py  offline_models_processor.py  process_audio_data.py  redact_scenario_states.py  retrieve_results.py  run-all-stanford.sh  run.sh  run_all.py  tetrachoric.py  validity_check.py  verify_reproducibility.py  (+1 more)
scripts/air_bench/: export_air_bench_csv.py
scripts/cache/: copy_cache.py  fix_anthropic_cache.py  fix_together_cache.py  remove_together_api_entries.py
scripts/contamination/: README.md  contamination_beam.py  run_contamination_beam.py
scripts/data_contamination/: Dockerfile  README.md  compute_contamination_metrics.py  contamination_beam.py  contamination_stats.py  load_documents.py  requirements-freeze.txt  requirements.txt  run_contamination_beam.py
scripts/data_overlap/: Collision Analysis.ipynb  Dockerfile  README.md  __init__.py  aggregate_metrics_by_scenario_spec.ipynb  aggregate_test_train_overlap_stats.ipynb  combine_ngrams.sh  compute_data_overlap_metrics.py  compute_metrics_from_ngrams.py  compute_overlap_metrics.py  data_overlap_beam.py  (+23 more)
src/: adapter.py  ai21_client.py  auto_client.py  basic_metrics.py  cache.py  client.py  example_queries.py  executor.py  general.py  huggingface_client.py  metric.py  models.py  object_spec.py  openai_client.py  run_benchmark.py  run_mem_specs.conf  runner.py  scenario.py  schemas.py  server.py  service.py  simple_client.py  simple_scenarios.py  statistic.py  test_adapter.py  test_service.py  test_utils.py  users.py
test_env/: accounts.jsonl  credentials.conf  openai_key.txt  users.jsonl
(+3591 files in other folders)
